actualizado con dibujo

--- a/ExamenJavierLopez/res/values/strings.xml
+++ b/ExamenJavierLopez/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="lblCajaRegalo">Caja regalo</string>
     <string name="lblTarjetaDedicada">Con tarjeta dedicada</string>
     <string name="BotoNombre">HACER CALCULOS</string>
+    <string name="Casita">Casita</string>
     
 </resources>
