Actualizado con pantalla de resultado

--- a/ExamenJavierLopez/res/values/strings.xml
+++ b/ExamenJavierLopez/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="lblTarjetaDedicada">Con tarjeta dedicada</string>
     <string name="BotoNombre">HACER CALCULOS</string>
     <string name="Casita">Casita</string>
+    <string name="Resultado">Resultado de su operacion</string>
     
 </resources>
